--- a/.github/workflows/build-and-zip.yaml
+++ b/.github/workflows/build-and-zip.yaml
@@ -2,9 +2,7 @@ name: Build and Zip
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: [customization]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
